# codebase_wikibuilder

./: .gitignore  README.md  pyproject.toml
.maps/docs/: Initial_Spec.md
.maps/docs/codebase-wiki-builder/catalog/: catalog.md
.maps/docs/codebase-wiki-builder/plans/: 01-project-scaffold.md  02-config.md  03-llm-client.md  04-vault-utils.md  05-scanner.md  06-summarizer.md  07-deletion.md  08-index-staleness.md  09-ingest-cli.md  10-analysis.md  11-query-engine.md  12-query-persistence.md  13-query-cli.md  14-lint-staleness.md  15-mcp-server.md  16-lint-dedup-healthcheck.md  17-lint-help-cli.md  18-obsidian-cli.md
.maps/docs/codebase-wiki-builder/research/: codebase-summary.md  web-research.md
.maps/docs/codebase-wiki-builder/reviews/: critic-review-plans.md  critical-review-1.md  critical-review-2.md  critical-review-3.md  llm-security-review-1.md  (+1 more)
codebase_wiki_builder/: __init__.py  analysis.py  cli.py  config.py  deletion.py  index_writer.py  lint_dedup.py  lint_healthcheck.py  lint_staleness.py  llm_client.py  logging_setup.py  mcp_server.py  obsidian_cli.py  query_cache.py  query_engine.py  query_persistence.py  scanner.py  staleness.py  summarizer.py  vault.py
tests/: test_analysis.py  test_config.py  test_deletion.py  test_index_writer.py  test_integration_analysis.py  test_integration_cache.py  test_integration_ingest.py  test_integration_lint.py  test_integration_query.py  test_lint_dedup.py  test_lint_healthcheck.py  test_mcp_server.py  test_query_cache.py  test_query_engine.py  test_scanner.py  test_staleness.py  test_vault.py
(+20 files in other folders)
