[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codebase-wiki-builder"
version = "0.1.0"
description = "LLM-powered Obsidian wiki builder for codebases"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.30.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "tiktoken>=0.7.0",
    "tenacity>=8.3.0",
    "mcp>=1.0.0",
]

[project.scripts]
codewiki = "codebase_wiki_builder.cli:app"
wiki-mcp = "codebase_wiki_builder.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["codebase_wiki_builder"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["codebase_wiki_builder"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
